@@ -73,10 +73,22 @@
 	  	</junit>
 	  </target>
 
+	  <target name="updateTests" depends="loginInfo,compile"
+	  	   description="Update; username/password required">
+	  	<junit printsummary="yes" haltonfailure="yes" fork="yes">
+	  	  <jvmarg value="-Dusername=${username}"/>
+	  	  <jvmarg value="-Dpassword=${password}"/>
+	  	  <formatter type="plain" usefile="no" />
+	  	  <classpath refid="project.class.path"/>
+	  	  <test name="org.mmisw.mmiorr.client.test.UpdateTest"/>
+	  	</junit>
+	  </target>
+
 	<target name="allTests" depends="registrationTests,retrievalTests" 
 	  description="All tests starting from registration">
 	</target>
 
+	
 	
 	  <target name="register" depends="compile,loginInfo">
 	    <java classname="org.mmisw.mmiorr.client.RegisterOntology">
